# NeoTkinter

./: .gitignore  CHANGELOG.md  MANIFEST.in  NeoTkinterTesting.py  Readme.md  build.ps1  pyproject.toml  setup.cfg
examples/: complex_example.py  example_background_image.py  image_example.py  scrollable_frame_example.py  simple_example.py
neotkinter/: __init__.py
neotkinter/assets/themes/: blue.json  dark-blue.json  green.json  purple.json
neotkinter/windows/: __init__.py  notification_manager.py  notification_panel.py  ntk_input_dialog.py  ntk_message_box.py  ntk_scrollable_dropdown.py  ntk_scrollable_dropdown_frame.py  ntk_title_menu.py  ntk_tk.py  ntk_tool_tip.py  ntk_toplevel.py
neotkinter/windows/widgets/: __init__.py  ntk_button.py  ntk_checkbox.py  ntk_code_box.py  ntk_combobox.py  ntk_dropdown_menu.py  ntk_entry.py  ntk_frame.py  ntk_label.py  ntk_menu_bar.py  ntk_optionmenu.py  ntk_progressbar.py  ntk_radiobutton.py  ntk_scrollable_frame.py  (+7 more)
test/manual_integration_tests/: test_all_widgets_with_colors.py  test_button_antialiasing.py  test_configure_dimensions.py  test_filedialog.py  test_font.py  test_images.py  test_ntk_toplevel.py  test_optionmenu_combobox.py  test_progressbar_intermediate_mode.py  test_scrollable_frame.py  test_segmented_button.py  test_states.py  test_string_dialog.py  test_tabview.py  test_textbox.py  test_theme_colors.py  test_ttk_frames.py  test_variables.py  test_vertical_widgets.py  test_window_geometry.py  text_entry_placeholder.py
test/unit_tests/: test_all.py  test_ntk.py  test_ntk_button.py  test_ntk_entry.py  test_ntk_toplevel.py
(+28 files in other folders)
