[metadata]
name = neotkinter
version = 5.2.2
description = Create modern looking GUIs with Python
long_description = A modern and customizable python UI-library based on Tkinter: https://neotkinter.tomschimansky.com
long_description_content_type = text/markdown
url = https://neotkinter.tomschimansky.com
author = Tom Schimansky
license = Creative Commons Zero v1.0 Universal
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[project.urls]
homepage = https://neotkinter.tomschimansky.com
documentation = https://neotkinter.tomschimansky.com/documentation
repository = https://github.com/tomschimansky/neotkinter

[options]
python_requires = >=3.7
packages =
    neotkinter
    neotkinter.windows
    neotkinter.windows.widgets
    neotkinter.windows.widgets.appearance_mode
    neotkinter.windows.widgets.core_rendering
    neotkinter.windows.widgets.core_widget_classes
    neotkinter.windows.widgets.font
    neotkinter.windows.widgets.image
    neotkinter.windows.widgets.scaling
    neotkinter.windows.widgets.theme
    neotkinter.windows.widgets.utility
install_requires =
    darkdetect
    typing_extensions; python_version<="3.7"
    packaging
include_package_data = True

[options.package_data]
neotkinter =
    assets/themes/*.json
    assets/icons/*.png
    assets/icons/*.ico
    assets/fonts/*.otf
    assets/fonts/Roboto/*.otf
    assets/fonts/Roboto/*.ttf